Sprint №8. After second review.